--- a/wiki/ABC.wiki
+++ b/wiki/ABC.wiki
@@ -11,8 +11,10 @@ Add your content here.
  * [http://github.com/propella/abcsx abcsx] !ActionScript Byte Code assembler/disassembler in PLT Scheme and Gauche.
  * [http://github.com/claus/as3abc as3abc] Low level Actionscript 3 library to parse, create, modify and publish ABC files.
  * [http://github.com/mzp/scheme-abc scheme-abc] Scheme compiler for !ActionScript3 Bytecode/Flash
+ * [http://wiki.libspark.org/wiki/Shibuya.abc_1 Shibuya.abc]
 
 *documents:*
  * (PDF) [http://llvm.org/devmtg/2009-10/Petersen_OptimizingActionScriptBytecode.pdf Optimizing ActionScript Bytecode using LLVM] by Scott Petersen (Adobe)
  * (PDF) [http://dougmccune.com/flex/FOTB_Decompiling_Doug_McCune.pdf Steal this Code - Decompiling SWFs for fun and profit] by [http://dougmccune.com/blog/ Doug McCune]
  * (PDF) [http://www.vpri.org/pdf/m2009010_for_avm2.pdf An Assembler for AVM2 using S-Expression] by [http://propella.blogspot.com/ Takashi Yamamiya]
+ * (PDF) [http://www.be-interactive.org/works/Shibuya.abc-1/Shibuya.abc-1.pdf Shibuya.abc presentation] by [http://www.be-interactive.org/index.php?itemid=343 Shindo Yoshihiro]
