--- a/wiki/Tutorials.wiki
+++ b/wiki/Tutorials.wiki
@@ -1,6 +1,8 @@
 #summary different tutorials to get you started.
 #labels Featured,Phase-Deploy,Phase-Support
 
+|| *important:* this project is under heavy changes, consider this wiki page obsolete ||
+
 = Videos =
 
 || <wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin.xml" width="480" height="385" border="0" /> || <wiki:gadget url="http://redtamarin.googlecode.com/svn/gadgets/introduction_to_redtamarin-script.xml" width="600" height="400" border="0" /> ||
