Edited wiki page Examples through web user interface.

--- a/wiki/Examples.wiki
+++ b/wiki/Examples.wiki
@@ -1,5 +1,7 @@
 #summary some examples of usage.
 
+|| *important:* this project is under heavy changes, consider this wiki page obsolete ||
+
 == Introduction ==
 
 Here you'll find some small code snippet to illustrate the use of redtamarin libraries.
