Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -13,6 +13,9 @@
     * [StandardC Standard C]
     * [FlashPlatform Flash Platform]
     * [AVMPlus AVMPlus]
+       * [FileSystem File System API]
+       * [OperatingSystem Operating System API]
+       * [Socket Sockets API]
   * Documentation
     * [Tamarin Tamarin]
     * [ASC ActionScript Compiler]
