Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -11,6 +11,12 @@
     * [Roadmap Roadmap]
   * [API API reference]
     * [StandardC Standard C]
+       * [C_stdlib stdlib]
+       * [C_unistd unistd]
+       * [C_string string]
+       * [C_errno errno]
+       * [C_stdio stdio]
+       * [C_socket socket]
     * [FlashPlatform Flash Platform]
     * [AVMPlus AVMPlus]
        * [FileSystem File System API]
