--- a/wiki/TamarinNotes.wiki
+++ b/wiki/TamarinNotes.wiki
@@ -4,7 +4,7 @@
 
 Some personal notes about Tamarin, can be howto, recipe, things to remember, etc.
 
-== Creating a ByteArray on the C++ side  ==
+== Creating a !ByteArray on the C++ side  ==
 
 {{{
 ByteArrayObject* bytes;
