--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -10,8 +10,8 @@
     * [CrossPlatform Cross Platform]
     * [Roadmap Roadmap]
     * misc. notes
-       [TamarinNotes notes about Tamarin]
-       [CrossPlatformNotes notes about cross-platform C/C++]
+       * [TamarinNotes notes about Tamarin]
+       * [CrossPlatformNotes notes about cross-platform C/C++]
   * [API API reference]
     * [StandardC Standard C]
        * [C_stdlib stdlib]
