--- a/wiki/CrossPlatformNotes.wiki
+++ b/wiki/CrossPlatformNotes.wiki
@@ -69,7 +69,7 @@ You can almost get away with it if you keep the descriptor as a private member i
 But, at one moment or another you will have to build your socket class by passing a socket descriptor and for that you have to setup on a common type.
 
 Luckily, I found this post [http://stackoverflow.com/questions/1953639/is-it-safe-to-cast-socket-to-int-under-win64 Is it safe to cast SOCKET to int under Win64?]<br>
-which mention
+which mention this comment from the openSSL source code
 
 {{{
 /*
@@ -77,4 +77,22 @@ which mention
  * the value constitutes an index in per-process table of limited size
  * and not a real pointer.
  */
+}}}
+
+and after some tests under Windows I can say:<br>
+yes you can cast your `SOCKET` to `int`!
+
+(note: I need to test under Windows 64bit but I'm pretty confident it should work there too)
+
+here an example
+{{{
+    int WinSocket::Accept() const
+    {
+        if(!IsValid()) {
+            return NULL;
+        }
+        
+        SOCKET socket = accept(_socket, NULL, NULL);
+        return (int)socket; //UINT_PTR casted to int
+    }
 }}}
