Edited wiki page CrossPlatformNotes through web user interface.

--- a/wiki/CrossPlatformNotes.wiki
+++ b/wiki/CrossPlatformNotes.wiki
@@ -65,7 +65,9 @@ SOCKET WSAAPI socket(
 typedef UINT_PTR        SOCKET;
 }}}
 
-You can almost get away with it if you keep the descriptor as a private member in an abstract class `Socket`, and then use the correct type with `PosixSocket` for POSIX and `WinSocket` for WIN32.
+You can almost get away with it if you keep the descriptor as a private member<br>
+in an abstract class `Socket`, and then use the correct type with `PosixSocket` for POSIX<br>
+and `WinSocket` for WIN32.
 
 But, at one moment or another you will have to build your socket class by passing a socket descriptor as an argument and for that to happen you have to agree on a common type (shared by your POSIX and WIN32 code).
 
