Edited wiki page C_stdlib through web user interface.

--- a/wiki/C_stdlib.wiki
+++ b/wiki/C_stdlib.wiki
@@ -9,6 +9,10 @@
 
 *package:* C.stdlib
 
+*constants*
+ * `EXIT_SUCCESS:int`
+ * `EXIT_FAILURE:int`
+
 *functions*
  * `abort():void`
  * `exit( status:int = -1 ):void`
