Edited wiki page FileSystem through web user interface.

--- a/wiki/FileSystem.wiki
+++ b/wiki/FileSystem.wiki
@@ -8,8 +8,9 @@ The FileSystem API provides methods to access and manipulate computer files, dir
 == Details ==
 
  * everything is blocking
- * we do not support unicode filename yet (eg. WIN32 use `char` not `wchar`
+ * no support for unicode filename yet (eg. WIN32 use `char` not `wchar`
  * it's pretty "raw", no optimizations of any kind (eg. directories traversal)
+ * no support for symlink, alias, shortcut
 
 
 == API ==
