--- a/wiki/API.wiki
+++ b/wiki/API.wiki
@@ -59,7 +59,7 @@ With redtamarin we took an hybrid approach
   * we have an AS3 project [http://code.google.com/p/maashaack/wiki/avmglue avmglue] which define all the classes, packages, etc.
   of the FPAPI as mock objects (or dumb implementations if you prefer).
   * all those FPAPI are implemented with the versioning API
-  we make the different between FP_9_0, AIR_1_0, FP_10_0, AIR_2_0, etc.
+  we make the difference between FP_9_0, AIR_1_0, FP_10_0, AIR_2_0, etc.
   (HAVE TO compile with ASC.jar, but can still use asdoc)
   * on a case by case basis, and when we have the required lower level API to do so,
   we add a concrete implementation of the FPAPI in parallel of the mock implementation.
